add junit & UI testing